--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+
     <title>Secure Password App</title>
   </head>
   <body>
@@ -40,4 +48,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
+    crossorigin
+  ></script>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+    crossorigin
+  ></script>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+    crossorigin
+  ></script>
 </html>
